--- a/frontend/app/src/main/res/layout/activity_main.xml
+++ b/frontend/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/btnRecord"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Record" />
+
+
     <ImageView
         android:id="@+id/image_view"
         android:layout_width="wrap_content"
